--- a/Java_tutorials(생활코딩)/.project
+++ b/Java_tutorials(생활코딩)/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Java_tutorials</name>
+	<name>Java_tutorials(생활코딩)</name>
 	<comment></comment>
 	<projects>
 	</projects>
